feat: implement the administration management and the maneuver management
